--- a/KidsAR-Android/app/src/main/res/layout/activity_purchase.xml
+++ b/KidsAR-Android/app/src/main/res/layout/activity_purchase.xml
@@ -36,31 +36,37 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:fontFamily="@font/comic_sans_ms_bold"
+            android:padding="5dp"
             android:text="Purchase"
             android:textAllCaps="false"
             android:textColor="#FFFFFF"
             android:textSize="25sp" />
 
+        <TextView
+            android:id="@+id/restore_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/button_back_icon"
+            android:fontFamily="@font/comic_sans_ms_bold"
+            android:paddingBottom="5dp"
+            android:paddingEnd="7dp"
+            android:paddingStart="7dp"
+            android:paddingTop="5dp"
+            android:text="Restore"
+            android:textAlignment="center"
+            android:textAllCaps="false"
+            android:textColor="#FFFFFF"
+            android:textSize="15sp" />
+
     </RelativeLayout>
 
-    <WebView
-        android:id="@+id/webview"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/purchase_list_recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/cpyrgt"
-        android:layout_below="@+id/tool_layout"
-        android:background="@color/white" />
-
-    <TextView
-        android:id="@+id/cpyrgt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:fontFamily="@font/comic_sans_ms"
-        android:gravity="center"
-        android:padding="10dp"
-        android:text="@string/copyrights"
-        android:textColor="@color/button_icon_color"
-        android:textSize="13sp" />
+        android:layout_below="@+id/tool_layout" />
 
 </RelativeLayout>
