--- a/KidsAR-Android/app/src/main/res/layout/animals_item.xml
+++ b/KidsAR-Android/app/src/main/res/layout/animals_item.xml
@@ -21,7 +21,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/layout_circle"
+                android:background="@drawable/layout_circle_one"
                 >
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:layout_width="match_parent"
@@ -49,7 +49,7 @@
             android:id="@+id/alphapet_label"
             android:text="Labell"
             android:textSize="14sp"
-            android:textColor="@color/button_icon_color"
+            android:textColor="@color/ar_white"
             android:fontFamily="@font/comic_sans_ms_bold"
             android:layout_marginBottom="12dp"
             android:layout_gravity="center_horizontal"
