--- a/KidsAR-Android/app/src/main/res/layout/alertdialog.xml
+++ b/KidsAR-Android/app/src/main/res/layout/alertdialog.xml
@@ -16,20 +16,20 @@
         android:layout_marginTop="15dp"
         android:fontFamily="@font/comic_sans_ms"
         android:text="Title"
-        android:textColor="@color/ar_black"
-        android:textSize="15sp" />
+        android:textColor="@color/darkgray"
+        android:textSize="19sp" />
 
     <TextView
         android:id="@+id/alert_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="20dp"
         android:focusable="true"
         android:fontFamily="@font/comic_sans_ms"
         android:padding="5dp"
         android:text="Alert Message"
-        android:textColor="@color/gray"
-        android:textSize="14sp" />
+        android:textColor="@color/ar_black"
+        android:textSize="17sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -41,11 +41,11 @@
             android:id="@+id/cancelalert"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
-            android:layout_margin="5dp"
+            android:layout_margin="3dp"
             android:alpha=".6"
             android:background="@drawable/button_back_icon"
             android:fontFamily="@font/comic_sans_ms_bold"
-            android:padding="5dp"
+            android:padding="3dp"
             android:text="Cancel"
             android:textColor="@color/white" />
 
@@ -53,11 +53,11 @@
             android:id="@+id/okalert"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
-            android:layout_margin="5dp"
+            android:layout_margin="3dp"
             android:alpha=".6"
             android:background="@drawable/button_back_icon"
             android:fontFamily="@font/comic_sans_ms_bold"
-            android:padding="5dp"
+            android:padding="3dp"
             android:text="OK"
             android:textColor="@color/white" />
     </LinearLayout>
