--- a/KidsAR-Android/app/src/main/res/layout/dialog_alphapets.xml
+++ b/KidsAR-Android/app/src/main/res/layout/dialog_alphapets.xml
@@ -1,106 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:minHeight="500dp"
     android:minWidth="500dp"
-    android:minHeight="500dp">
+    android:orientation="vertical">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-   <ImageView
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       android:id="@+id/image_background"
-       android:scaleType="centerCrop"
-       android:visibility="visible"/>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:id="@+id/alphapet_transparent"
-            android:background="@color/ar_white"
-            android:alpha=".6"
-            android:visibility="gone">
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:id="@+id/animal_transparent"
-            android:background="#27ae60"
-            android:alpha=".6"
-            android:visibility="gone">
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:id="@+id/fandv_transparent"
-            android:background="#E1CDB4"
-            android:alpha=".7"
-            android:visibility="gone">
-        </LinearLayout>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/c_one"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="5dp">
+
         <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:id="@+id/deco_icon_alphapet"
-            android:src="@drawable/show_alphabet"
-            android:layout_centerVertical="true"
-            android:adjustViewBounds="true"
+            android:id="@+id/image_background"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:visibility="gone"
-            />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/dialog_header"
-        android:text="ALPHABETS"
-        android:textSize="25sp"
-        android:fontFamily="@font/comic_sans_ms_bold"
-        android:textColor="@color/button_icon_color"
-        android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/deco_icon_alphapet"
-        android:layout_marginLeft="5dp"/>
-        <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:id="@+id/alphapets_close"
-            android:layout_alignParentRight="true"
-            android:src="@drawable/animal_close"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="7dp"/>
-    </RelativeLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:id="@+id/v_one"
-        android:background="#cc8e35"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="8dp"
-        android:layout_below="@id/c_one"/>
+            android:visibility="visible" />
+
+        <LinearLayout
+            android:id="@+id/alphapet_transparent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:alpha=".6"
+            android:background="@color/ar_white"
+            android:orientation="vertical"
+            android:visibility="gone" />
+
+        <LinearLayout
+            android:id="@+id/animal_transparent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:alpha=".6"
+            android:background="#27ae60"
+            android:orientation="vertical"
+            android:visibility="gone" />
+
+        <LinearLayout
+            android:id="@+id/fandv_transparent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:alpha=".7"
+            android:background="#E1CDB4"
+            android:orientation="vertical"
+            android:visibility="gone" />
+
+        <RelativeLayout
+            android:id="@+id/c_one"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp">
+
+            <ImageView
+                android:id="@+id/deco_icon_alphapet"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_centerVertical="true"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/show_alphabet"
+                android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/dialog_header"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="5dp"
+                android:layout_toEndOf="@+id/deco_icon_alphapet"
+                android:fontFamily="@font/comic_sans_ms_bold"
+                android:text="ALPHABETS"
+                android:textColor="@color/button_icon_color"
+                android:textSize="25sp" />
+
+            <ImageView
+                android:id="@+id/alphapets_close"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="7dp"
+                android:src="@drawable/animal_close" />
+        </RelativeLayout>
+
+        <View
+            android:id="@+id/v_one"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_below="@id/c_one"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="5dp"
+            android:background="#cc8e35" />
 
 
-    <android.support.v7.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/v_one"
-        android:id="@+id/list_alphapets"
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="15dp">
-    </android.support.v7.widget.RecyclerView>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/list_alphapets"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/v_one"
+            android:layout_marginBottom="15dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="8dp" />
     </RelativeLayout>
-<!--<View-->
+    <!--<View-->
     <!--android:layout_width="match_parent"-->
     <!--android:layout_height="40dp"/>-->
 </FrameLayout>
