--- a/KidsAR-Android/app/src/main/res/layout/settings_name_layout.xml
+++ b/KidsAR-Android/app/src/main/res/layout/settings_name_layout.xml
@@ -48,6 +48,7 @@
             android:layout_margin="5dp"
             android:alpha=".6"
             android:background="@drawable/button_back_icon"
+            android:fontFamily="@font/comic_sans_ms"
             android:padding="5dp"
             android:text="Cancel"
             android:textColor="@color/white" />
@@ -59,6 +60,7 @@
             android:layout_margin="5dp"
             android:alpha=".6"
             android:background="@drawable/button_back_icon"
+            android:fontFamily="@font/comic_sans_ms"
             android:padding="5dp"
             android:text="Save"
             android:textColor="@color/white" />
