--- a/KidsAR-Android/app/src/main/res/layout/activity_arview.xml
+++ b/KidsAR-Android/app/src/main/res/layout/activity_arview.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background">
+    >
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/background"
+        android:scaleType="centerCrop"
+        android:visibility="visible"/>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -43,24 +52,30 @@
         android:id="@+id/take_screenshot"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:background="@drawable/camera"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="25dp"
-        android:layout_marginStart="149dp"
-        android:background="@drawable/camera" />
-
+        android:layout_marginBottom="10dp"
+        android:layout_toLeftOf="@+id/button_view_one"/>
+        <View
+            android:layout_width="30dp"
+            android:layout_height="40dp"
+            android:id="@+id/button_view_one"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="10dp"/>
     <Button
         android:id="@+id/play_music"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/take_screenshot"
-        android:layout_marginEnd="145dp"
-        android:background="@drawable/volume" />
+        android:background="@drawable/volume"
+        android:layout_alignParentBottom="true"
+        android:layout_toRightOf="@+id/button_view_one"
+        android:layout_marginBottom="10dp"/>
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/unity_scene_view"
         android:layout_below="@+id/kid_ar_toolbar">
     </FrameLayout>
-</RelativeLayout>
+    </RelativeLayout>
+</FrameLayout>
